--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                 <ul class="header__navbar-list">
                     <li class="header__navbar-item"><a href="#"><img class="header__navbar-logo" src="/assets/img/furnob-logo-dark.png" alt=""></a></li>
                     <li class="header__navbar-item"><a href="#">Home</a></li>
-                    <li class="header__navbar-item"><a href="#">Shop<i class="bi bi-chevron-down"></i></a></li>
+                    <li class="header__navbar-item"><a href="#">Shop</a></li>
                     <li class="header__navbar-item"><a href="#">Living Room</a></li>
                     <li class="header__navbar-item"><a href="#">Kitchen</a></li>
                     <li class="header__navbar-item"><a href="#">Decoration</a></li>
@@ -57,33 +57,70 @@
         </header>
         <div class="container">
             <div class="container__background">
-                <p class="container__background-text1">
-                    Only <span style="text-decoration: underline;">This Weekend</span> off Sale
-                </p>
-                <p class="container__background-text2">
-                    Leave the season in Furnob style
-                </p>
-                <p class="container__background-text3">
-                    Known for its modern, modular furniture, Burrow's Nomad Sofa is one of the brand's most popular offerings, thanks to its unparalleled versatility and wide range of customization options. 
-                </p>
-                <img class="container__background-img" src="/assets/img/img-1.png" alt="">
-                <a href="#">
-                    <button class="container__background-button">Shop Collection<i class="bi bi-arrow-right"></i></button>
-                </a>
+                <div class="container__background-text-p1">
+                    <p class="container__background-text1">
+                        Only <span style="text-decoration: underline;">This Weekend</span> off Sale
+                    </p>
+                </div>
+                <div class="container__background-text-p2">
+                    <p class="container__background-text2">
+                        Leave the season in Furnob style
+                    </p>
+                </div>
+                <div class="container__background-text-p3">
+                    <p class="container__background-text3">
+                        Known for its modern, modular furniture, Burrow's Nomad Sofa is one of the brand's most popular offerings, thanks to its unparalleled versatility and wide range of customization options. 
+                    </p>
+                </div>
+                <div class="container__background-img-p4">
+                    <img class="container__background-img" src="/assets/img/img-1.png" alt="">
+                </div>
+                <div class="container__background-button-p5">
+                    <a href="#">
+                        <button class="container__background-button">Shop Collection<i class="bi bi-arrow-right"></i></button>
+                    </a>
+                </div>
             </div>
             <div class="container__imageicon">
                 <div class="container__imageicon-list">
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-                    <div class="container__imageicon-item"><a href="#"><img src="/assets/img/livingroomicon.png" alt=""></a></div>
-
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/livingroomicon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Living Room</h4></a>
+                        <span class="imageicon-span">10 items</span>
+                    </div>
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/bedroomicon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Bed Room</h4></a>
+                        <span class="imageicon-span">5 items</span>
+                    </div>   
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/bussinesicon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Desk</h4></a>
+                        <span class="imageicon-span">6 items</span>
+                    </div>
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/officeicon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Home Office</h4></a>
+                        <span class="imageicon-span">4 items</span>
+                    </div>
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/lighticon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Lighting</h4></a>
+                        <span class="imageicon-span">3 items</span>
+                    </div>
+                    <div class="container__imageicon-item">
+                        <a href="#"><img class="imageicon-image" src="/assets/img/decorationicon.png" alt=""></a>
+                        <a class="imageicon-tittle" href="#"><h4>Decoration</h4></a>
+                        <span class="imageicon-span">7 items</span>
+                    </div>
                 </div>
+            </div>
+            <div class="container__category">
+                <div class="container__category-head">
+                    <h2 class="category-head">Featured Categories</h2>
+                    <p class="category-p">Visit our shop to see amazing creations from our designers.</p>
+                </div>
+                
             </div>
         </div>
         <footer class="footer">
